@@ -1,5 +1,7 @@
 2007-06-10  TOKI Yoshinori  <toki@freedom.ne.jp>
 
+	* lib/gluon/po.rb: (Gluon::PresentationObject class) frame method.
+
 	* lib/gluon/po.rb: (Gluon::PresentationObject class) target
 	attribute of link method.
 
